--- a/assets/css/type.css
+++ b/assets/css/type.css
@@ -3,7 +3,7 @@
  h1 {
  	font: 400 56px/1.2 "Montserrat", sans-serif;
 	color: white;
-	padding-bottom: 20px; 
+	padding-bottom: 18px; 
 	letter-spacing: -1px;
  }
 
@@ -23,8 +23,8 @@
  h2 {
 	font: 400 28px/1.5 "Montserrat", sans-serif;
    color: white;
-   padding-bottom: 10px;
-   padding-top: 28px;
+   padding-bottom: 8px;
+   padding-top: 20px;
 }
 
  h1 a { 
